--- a/style.css
+++ b/style.css
@@ -26,3 +26,7 @@ body {
     border: black 0.5px solid;
     background-color: antiquewhite;
 }
+
+.cell:hover {
+    background-color: aquamarine;
+}
