--- a/style.css
+++ b/style.css
@@ -27,11 +27,27 @@ body {
 .cell {
     width: calc(var(--grid-size) / 3);
     height: calc(var(--grid-size) / 3);
-    border: #00FF00 1px dashed;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 5rem;
+    border: #00FF00 1px dashed;
+}
+
+.first-row {
+    border-top: none;
+}
+
+.first-col {
+    border-left: none;
+}
+
+.third-col {
+    border-right: none;
+}
+
+.third-row {
+    border-bottom: none;
 }
 
 .players {
@@ -66,6 +82,7 @@ button {
     background-color: black;
     padding: 10px;
     color: #00FF00;
+    font-size: 1rem;
     font-family: "Roboto Mono", monospace;
     border-radius: 5px;
     border: none;
